# nwpu-gamedev-2025

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/commands/: gemini-triage.toml
.github/workflows/: clang-format-check.yml  cmake-build.yml
game/: AnimationFSM.hpp  AnyCache.hpp  App.cpp  App.hpp  FontLoader.hpp  GPUImageLoader.hpp  GameManager.cpp  GameManager.hpp  GameState.cpp  GameState.hpp  Input.cpp  Input.hpp  InputUtil.hpp  InterpolationBuffer.hpp  Localization.cpp  Localization.hpp  ModelLoader.hpp  NetworkAdaptor.cpp  NetworkAdaptor.hpp  NetworkDispatcher.cpp  NetworkDispatcher.hpp  ObjectPool.cpp  ObjectPool.hpp  Param.cpp  Param.hpp  Registry.cpp  Registry.hpp  RingBuffer.hpp  SimpleFSM.hpp  TomlImpl.cpp  TomlImpl.hpp  Tween.hpp  Util.cpp  Util.hpp
game/FlatBuffers/: compile_fbs.py
game/FlatBuffers/Received/: Events.fbs  Main.fbs  PlayerInfo.fbs  PlayerTeam.fbs  PlayerUpdate.fbs  README.md  Weapon.fbs  receiveConnectionPacket.fbs  receiveGamingPacket.fbs  timeSync.fbs
game/FlatBuffers/Sent/: README.md  receiveConnectionPacket.fbs  receiveGamingPacket.fbs  respondPlayerListPacket.fbs
game/State/: BombPlantState.cpp  BombPlantState.hpp  ChatboxState.cpp  ChatboxState.hpp  CreditsState.cpp  CreditsState.hpp  CrossHairState.cpp  CrossHairState.hpp  DebugToolState.cpp  DebugToolState.hpp  GameCommon.hpp  GameModels.cpp  GameModels.hpp  GamePlayData.hpp  GamePlayState.cpp  GamePlayState.hpp  HudSharedConfig.cpp  HudSharedConfig.hpp  HudState.cpp  HudState.hpp  LocalPlayerState.cpp  LocalPlayerState.hpp  MainMenuState.cpp  MainMenuState.hpp  PauseUIState.cpp  PauseUIState.hpp  PlayerSharedConfig.cpp  PlayerSharedConfig.hpp  PlaygroundState.cpp  PlaygroundState.hpp  PurchaseState.cpp  PurchaseState.hpp  RemotePlayerState.cpp  RemotePlayerState.hpp  ScoreBoardState.cpp  ScoreBoardState.hpp  ScoreDetailState.cpp  ScoreDetailState.hpp  SplashScreenState.cpp  SplashScreenState.hpp  (+4 more)
include/Audio/: AudioBuffer.hpp  AudioEngine.hpp  AudioListener.hpp  AudioSource.hpp  StaticOggProvider.hpp
include/Core/: ABuffer.hpp  AFlag.hpp  Common.hpp  DBuffer.hpp  Deferred.hpp  FileWriter.hpp  Input.hpp  Logger.hpp  Ref.hpp  RefCounted.hpp  SBuffer.hpp  TBuffer.hpp
include/Core/Meta/: Feature.hpp  TypeTraits.hpp
include/Core/Resource/: BinaryLoader.hpp  Cached.hpp  Image.hpp  ImageLoader.hpp  Launch.hpp  Lazy.hpp  OrDefault.hpp  Preload.hpp  Secure.hpp
include/Core/Task/: Scheduler.hpp
include/Math/: Color.hpp
include/Physics/: GltfColliderFactory.hpp  JoltIncludes.hpp  ObjectSnapshot.hpp  PhysicsEngine.hpp  TypeUtils.hpp
include/Render/Vulkan/: VulkanEngine.hpp  VulkanEngineDrivers.hpp  VulkanFont.hpp  VulkanMesh.hpp  VulkanRenderable.hpp
include/UI/: RootWidget.hpp  SpriteWidget.hpp  TextWidget.hpp  Widget.hpp
include/UI/Vulkan/: VkBoxWidget.hpp  VkButtonWidget.hpp  VkImageWidget.hpp  VkProgressBarWidget.hpp  VkTextWidget.hpp  VkWidgetExt.hpp
shaders/slang/: blend_two.slang  deferred_lighting.slang  gaussian_blur.slang  sprite.slang
shaders/slang/moe/: light_utils.slang  pbr_lighting.slang  toon_lighting.slang
src/Audio/: AudioBuffer.cpp  AudioEngine.cpp  AudioListener.cpp  AudioSource.cpp  StaticOggProvider.cpp
src/Core/: FileWriter.cpp  Logger.cpp
src/Core/Task/: Scheduler.cpp
src/Physics/: GltfColliderFactory.cpp  PhysicsEngine.cpp
src/Render/Vulkan/: VulkanEngine.cpp  VulkanEngineDrivers.cpp  VulkanFont.cpp  VulkanImageCache.cpp  VulkanMeshCache.cpp
src/UI/Vulkan/: VkBoxWidget.cpp  (+4 more)
(+9 files in other folders)
